tests/ui/feature-gates/feature-gate-concat_bytes.stderr
error[E0658]: use of unstable library feature `concat_bytes`
  --> $DIR/feature-gate-concat_bytes.rs:2:13
   |
LL |     let a = concat_bytes!(b'A', b"BC");
   |             ^^^^^^^^^^^^
   |
   = note: see issue #87555 <https://github.com/rust-lang/rust/issues/87555> for more information
   = help: add `#![feature(concat_bytes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
